Fix shift submissions view

--- a/app/javascript/src/application.scss
+++ b/app/javascript/src/application.scss
@@ -34,3 +34,14 @@ aside ul, header ul {
 table {
   background-color: #ffffff;
 }
+
+.ss-row {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.error-row {
+  border: thin solid #d9534f;
+}
